--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -26,5 +26,6 @@
     <!--<div class="login-footer">-->
       <!--<img src="build/assets/img/login/login_footer.png"/>-->
     <!--</div>-->
+    <div class="version">ver {{data.version}}</div>
   </ion-content>
 </ion-view>
