--- a/src/pages/indexPage/indexPage.html
+++ b/src/pages/indexPage/indexPage.html
@@ -43,7 +43,7 @@
               <img src="build/assets/img/indexPage/icon_equipment.png"/>
               <div class="spe-info">
                 <div class="number">{{newViewData.new_data.trigger || 0}}</div>
-                <div class="data-type">设备启动</div>
+                <div class="data-type">账户启动</div>
               </div>
               <div class="auto-height"></div>
             </div>
