--- a/src/pages/password/changePassword/changePassword.html
+++ b/src/pages/password/changePassword/changePassword.html
@@ -1,5 +1,5 @@
 <ion-view view-title="班级情况统计" class="changePassword">
-  <ion-header-bar align-title="center" class="head-bg haed">
+  <ion-header-bar align-title="center" class="head-bg haed header">
     <button class="button button-icon icon ion-ios-arrow-left header_buttonRig" ng-click="goBack()"></button>
     <div class="title titleStyle">
       修改密码
