--- a/src/pages/school/school.html
+++ b/src/pages/school/school.html
@@ -248,6 +248,17 @@
       <!--academic-section-statistics-->
 
     </div>
+
+    <!--<label class="item item-input item-icon-right">-->
+      <!--<span class="input-label">开始日期时间</span>-->
+      <!--<input input-datetime format="yyyy-MM-dd HH:mm" type="text" max="vo.endDatetime" ng-model="vo.startDatetime">-->
+      <!--<i class="icon fa fa-calendar"></i>-->
+    <!--</label>-->
+    <!--<label class="item item-input item-icon-right">-->
+      <!--<span class="input-label">选择框</span>-->
+      <!--<select class="ng-hide" input-select ng-model="vo.selector" select-data="vo.selectData" option-text="value" option-value="code" prefix="想学 " suffix=" 语言" circular="true"></select>-->
+      <!--<i class="icon ion-ios-arrow-down"></i>-->
+    <!--</label>-->
     <!--global-container-->
   </ion-content>
 </ion-view>
