--- a/src/pages/tab/tab.html
+++ b/src/pages/tab/tab.html
@@ -16,11 +16,11 @@
     </div>
   </div>
   <!--设置弹窗modal-->
-  <div class="modal" ng-class="{'md-show':config.showSettingModal}">
+  <div class="modal" ng-class="{'md-show':config.showSettingModal}" ng-click="config.showSettingModal = false">
     <div class="change-psd-box slideInUp">
       <div class="state-box">
         <a href="javascript:void(0)" class="change-psd-btn" ng-click="goChangePassword()">修改密码</a>
-        <a href="javascript:void(0)" class="exit-account-btn" ng-click="exitAccount()">退出账号</a>
+        <a href="javascript:void(0)" class="exit-account-btn" ng-click="exitAccount(); $event.stopPropagation();">退出账号</a>
       </div>
       <a href="javascript:void(0)" class="cancel-btn" ng-click="config.showSettingModal = false">取消</a>
     </div>
