--- a/www/index.html
+++ b/www/index.html
@@ -20,7 +20,9 @@
   <script src="build/app.bundle.js"></script>
   <script src="build/lib/ngCordova/dist/ng-cordova.js"></script>
   <!-- cordova script (this will be a 404 during development) -->
+  <script src="build/lib/oclazyload/dist/ocLazyLoad.min.js"></script>
   <script src="cordova.js"></script>
+
 </head>
 
 <body ng-app="myApp" ng-controller="AppSpCtrl">
